# biomarker-gnn-demo

./: .gitignore  README.md  pyproject.toml
data/: biomarker_nodes.csv  disease_nodes.csv  gnn_model.pt  knowledge_graph.pkl  node_features.csv  processed_heart_disease.csv  relationships.csv
data/evaluation/: node_embeddings.npy
src/: __init__.py  config.py  data_processing.py  evaluate_models.py  gnn_model.py  graph_builder.py  inference.py  train.py  visualization.py
