[project]
name = "biomarker-gnn-demo"
version = "0.1.0"
description = "A demo project for biomarker-disease prediction using GNNs"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 